--- a/modules/academy_tests/views/at_question_view.xml
+++ b/modules/academy_tests/views/at_question_view.xml
@@ -44,17 +44,19 @@
                         <label for="name" class="oe_edit_only" />
                         <h1>
                             <field name="name" class="oe_field_name"
-                                placeholder="Enter text for question" />
+                                placeholder="Enter new text for question" />
                         </h1>
                     </div>
 
-                    <group col="2">
+                    <group col="4">
                         <field name="at_topic_id" class="oe_field_at_topic_id" />
+                        <field name="at_level_id" class="oe_field_at_level_id"
+                            placeholder="Enter new value for level" />
                         <field name="at_category_ids" class="oe_field_at_category_ids"
-                            widget="many2many_tags"
+                            widget="many2many_tags" colspan="4"
                             attrs="{'readonly': [('at_topic_id', '=', False)]}" />
                         <field name="at_tag_ids" class="oe_field_at_tag_ids"
-                            widget="many2many_tags" />
+                            widget="many2many_tags"  colspan="4" />
                     </group>
 
                     <notebook>
@@ -62,16 +64,13 @@
                             <field name="at_answer_ids" class="oe_field_at_answer_ids"
                                 context="{'tree_view_ref' : 'academy_tests.view_at_answer_tree_x2many'}" />
                         </page>
-                        <page string="Alternative wording" class="oe_page_alternative_wording" accesskey="L">
-                            <field name="alternative_wording_ids" class="oe_field_alternative_wording_ids" />
-                        </page>
                         <page string="Attachments" class="oe_page_attachments" accesskey="T">
                             <field name="ir_attachment_ids" class="oe_field_ir_attachment_ids"
-                                context="{'tree_view_ref' : 'view_ir_attachment_tree'}" />
+                                context="{'tree_view_ref' : 'academy_tests.view_ir_attachment_tree'}" />
                         </page>
                         <page string="Description" class="oe_page_description" accesskey="D">
                             <field name="description" class="oe_field_description"
-                                placeholder="Enter the text for description" />
+                                placeholder="Enter new text for description" />
                         </page>
                     </notebook>
 
