[WIP] Test-Question relationship

--- a/modules/academy_tests/views/at_test_view.xml
+++ b/modules/academy_tests/views/at_test_view.xml
@@ -54,7 +54,7 @@
                                     placeholder="Enter new text for description" />
                             </page>
                             <page string="Questions" class="oe_page_questions" accesskey="D">
-                                <field name="at_question_ids" class="oe_field_at_question_ids" />
+                                <field name="at_test_at_question_ids" class="oe_field_at_question_ids" />
                             </page>
                         </notebook>
                     </sheet>
