[WIP] Development tools runs on v10 but it does't allow to be configured

--- a/modules/academy_tests/views/academy_tests.xml
+++ b/modules/academy_tests/views/academy_tests.xml
@@ -14,17 +14,11 @@
             <field name="parent_id" ref="menu_academy" />
         </record>
 
-        <record id="menu_questions_top" model="ir.ui.menu" >
-            <field name="name">Questions</field>
-            <field name="sequence" eval="10" />
-            <field name="parent_id" ref="menu_academy" />
-        </record>
-
-        <record id="menu_settings_top" model="ir.ui.menu" >
+<!--         <record id="menu_settings_top" model="ir.ui.menu" >
             <field name="name">Settings</field>
             <field name="sequence" eval="10" />
             <field name="parent_id" ref="menu_academy" />
-        </record>
+        </record> -->
 
         <record id="view_academy_tests_assets" model="ir.ui.view">
             <field name="name">academy_tests assets</field>
