--- a/modules/development_tools/views/base_ir_module_module.xml
+++ b/modules/development_tools/views/base_ir_module_module.xml
@@ -12,8 +12,22 @@
             <field name="active" eval="True" />
             <field name="inherit_id" ref="base.module_view_kanban" />
             <field name="arch" type="xml">
-                <xpath expr="//button[@t-if='installed']" position="replace">
-                    <button t-if='installed' name="button_immediate_upgrade" states="installed" type="object" class="oe_highlight">
+                <xpath expr="//img" position="before">
+                    <div class="odoo_development">
+                        <field
+                            name="favourite"
+                            widget="boolean_favorite"
+                            nolabel="1"
+                            force_save="1"
+                            class="pull-right" />
+                    </div>
+                </xpath>
+                <xpath expr="//span[@t-if='installed']" position="replace">
+                    <button t-if='installed'
+                            name="button_immediate_upgrade"
+                            states="installed"
+                            type="object"
+                            class="btn btn-success pull-right btn-sm">
                         Upgrade
                     </button>
                 </xpath>
