--- a/modules/development_tools/views/base_view_view_tree.xml
+++ b/modules/development_tools/views/base_view_view_tree.xml
@@ -22,5 +22,20 @@
             </field>
         </record>
 
+        <record id="view_ir_ui_view_form" model="ir.ui.view">
+            <field name="name">ir.ui.view.form</field>
+            <field name="model">ir.ui.view</field>
+            <field name="type">form</field>
+            <field name="mode">primary</field>
+            <field name="priority" eval="10" />
+            <field name="active" eval="True" />
+            <field name="inherit_id" ref="base.view_view_form" />
+            <field name="arch" type="xml">
+                <xpath expr="//sheet/group[1]" position="before">
+                    <button name="reload" string="Reload" type="object" />
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </openerp>
